--- a/PMS-PropertyHapa.Owner/Views/Auth/Login.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Auth/Login.cshtml
@@ -46,8 +46,11 @@
                         if (response.success) {
                             debugger;
                             localStorage.setItem('userId', response.id);
-                            if (response.organization && response.organization.logo) {
-                                localStorage.setItem('organizationLogo', response.organization.logo);
+                            if (response.organization && response.organization.info) {
+                                localStorage.setItem('organizationLogo', response.organization.info);
+                            }
+                            if (response.organization && response.organization.icon) {
+                                localStorage.setItem('organizationIcon', response.organization.icon);
                             }
                             var Toast = Swal.mixin({ toast: true, position: 'top-end', showConfirmButton: false, progressBar: true, timer: 3000 });
                             Toast.fire({ icon: 'success', title: 'You are logged in!' });
