--- a/PMS-PropertyHapa.Owner/Views/Shared/ManagePropertyforOwnerLayout.cshtml
+++ b/PMS-PropertyHapa.Owner/Views/Shared/ManagePropertyforOwnerLayout.cshtml
@@ -20,7 +20,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-
+    <link rel="icon" id="faviconIcon" type="image/x-icon">
     <link rel="shortcut icon" href="~/Dashboard/assets/images/logo/favicon-icon.png" type="image/x-icon">
     <title>Owner Portal</title>
     <!-- Google font-->
@@ -543,6 +543,25 @@
                 }
             });
         }
+
+
+
+
+        var organizationIconBase64 = localStorage.getItem('organizationIcon');
+        console.log('organizationIconBase64:', organizationIconBase64); // Check the value in the console
+
+        if (organizationIconBase64) {
+            var organizationIconDataURI = 'data:image;base64,' + organizationIconBase64;
+            var faviconIcon = document.getElementById('faviconIcon');
+            if (faviconIcon) {
+                faviconIcon.href = organizationIconDataURI;
+            } else {
+                console.error('faviconIcon element not found');
+            }
+        } else {
+            console.error('organizationIconBase64 is empty or not found in localStorage');
+        }
+
 
     </script>
 
