--- a/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/AddTenant.cshtml
@@ -9,7 +9,7 @@
         <div class="page-title">
             <div class="row">
                 <div class="col-12 col-sm-6">
-                    <h3>@(Model.TenantId == null ? "Add Tenant" : "Edit Tenant")</h3>
+                    <h3>@(Model?.TenantId == null ? "Add Tenant" : "Edit Tenant")</h3>
                 </div>
                 <div class="col-12 col-sm-6">
                     <ol class="breadcrumb">
@@ -24,7 +24,7 @@
                         }
 
                         <li class="breadcrumb-item">Tenant</li>
-                        <li class="breadcrumb-item active">@(Model.TenantId == null ? "Add Tenant" : "Edit Tenant")</li>
+                        <li class="breadcrumb-item active">@(Model?.TenantId == null ? "Add Tenant" : "Edit Tenant")</li>
                     </ol>
                 </div>
             </div>
