--- a/PMS-PropertyHapa.Staff/Views/Shared/ManagePropertyforOwnerLayout.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Shared/ManagePropertyforOwnerLayout.cshtml
@@ -39,7 +39,7 @@
 
     <link rel="icon" href="" type="image/x-icon" id="Org_icon">
     <link rel="shortcut icon" href="" type="image/x-icon" id="Org_iconshort">
-    <title>Staff Portal</title>
+    <title>PMC Portal</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
