--- a/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Tenant/Index.cshtml
@@ -253,7 +253,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
